Pirozhki 0.5.2, 2015-10-12
--------------------------
- Add rollbar support.
- Add sidekiq-statistic.

Pirozhki 0.5.1, 2015-07-18
--------------------------
- Update sidekiq (add session_secret).
- Add NewRelic support.

Pirozhki 0.5.0, 2015-07-12
--------------------------
- Add hashtag as a source for instagram.

Pirozhki 0.4.3, 2015-06-18
--------------------------
- Update gems (including activesupport security fixes).

Pirozhki 0.4.2, 2015-06-01
--------------------------
- Change test framework (rspec to minitest).
- Remove all parentheses.

Pirozhki 0.4.1, 2014-12-30
--------------------------
- Add link to http://pirozhki.zubkonst.com to README.
- Set Toronto as default city.

Pirozhki 0.4.0, 2014-12-26
--------------------------
- Using travis-ci container-based infrastructure.
- Remove post counters. (Need to rebuild database).
- Add different logstash inputs support.
- Move Docker stuff to https://github.com/ZubKonst/pirozhki-elk .

Pirozhki 0.3.0, 2014-12-07
--------------------------
- Config and run fig.
- Run Pirozhki in Docker.
- Add Docker image.

Pirozhki 0.2.3, 2014-11-27
--------------------------
- Move all configs to application.yml.
- Use single sidekiq worker for all queues.
- Add global APP_ENV and APP_ROOT.
- Add app settings.
- Remove sidekiq-benchmark.

Pirozhki 0.2.2, 2014-11-22
--------------------------
- Add license.
- Add redis config.
- Improve tests.

Pirozhki 0.2.1, 2014-11-18
--------------------------
- Add gemnasium.
- Change test framework (minitest to rspec).
- Add mutation testing + improve specs.
- Move db tasks to rake.

Pirozhki 0.1.2, 2014-11-13
--------------------------
- Add codeclimate, travis-ci, coveralls.

Pirozhki 0.1.1, 2014-08-16
--------------------------
- Add changelog file.
- Add specs.

Pirozhki 0.1.0, 2014-08-07
--------------------------
- Initial release.