@@ -1,8 +1,8 @@
 source 'https://rubygems.org'
 
 # rails parts
-gem 'activerecord',  '4.2.4', require: 'active_record'
-gem 'activesupport', '4.2.4',
+gem 'activerecord',  '4.2.5', require: 'active_record'
+gem 'activesupport', '4.2.5',
     require: %w[ active_support/core_ext/numeric/time active_support/concern ]
 
 # databases
@@ -30,11 +30,10 @@ gem 'puma'
 
 # workflow
 gem 'settingslogic'
-gem 'sidekiq', '3.4.2' # https://github.com/tobiassvn/sidetiq/issues/140
 gem 'sinatra'
 gem 'sidekiq-throttler'
 gem 'sidekiq-unique-jobs'
-gem 'sidetiq'
+gem 'sidekiq-cron'
 gem 'sidekiq-statistic'
 
 group :development do
