@@ -5,6 +5,7 @@ require_relative 'initializers/i18n'
 require_relative 'initializers/exporter'
 require_relative 'initializers/database'
 require_relative 'initializers/sidekiq'
+require_relative 'initializers/sidekiq_cron'
 require_relative 'initializers/instagram'
 
 require_relative 'initializers/newrelic'
