@@ -1,0 +1,14 @@
+common: &default_settings
+  request_manager:
+    cron: "* * * * *"
+    class: "RequestManager"
+    queue: "request_manager"
+
+test:
+  <<: *default_settings
+
+development:
+  <<: *default_settings
+
+production:
+  <<: *default_settings
