@@ -1,3 +1,5 @@
+- Migrate from sidetiq to sidekiq-cron
+
 Pirozhki 0.5.2, 2015-10-12
 --------------------------
 - Add rollbar support.
